Move tests to mocha

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "main": "./lib/poppler.js",
   "dependencies": {},
   "devDependencies": {
-    "nodeunit": "*"
+    "mocha": "*"
   },
   "optionalDependencies": {},
   "engines": {
