--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "poppler-simple",
   "description": "A simple interface to poppler pdf library",
   "keywords": ["pdf", "poppler"],
-  "version": "0.0.6",
+  "version": "0.0.7",
   "repository": {
     "type": "git",
     "url": "git://github.com/blackbeam/node-poppler.git"
@@ -16,14 +16,11 @@
   },
   "main": "./lib/poppler.js",
   "engines": {
-    "node": ">=0.10.0 <0.12.0"
+    "node": ">=0.8.0 <0.12.0"
   },
   "dependencies": {},
   "devDependencies": {
     "mocha": "*"
   },
-  "optionalDependencies": {},
-  "engines": {
-    "node": "*"
-  }
+  "optionalDependencies": {}
 }
