--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "author": "AnatolyI <ai@rsl.ru>",
   "name": "poppler-simple",
-  "description": "A simple interface to poppler pdf library",
-  "keywords": ["pdf", "poppler"],
+  "description": "A simple interface to poppler library",
+  "keywords": ["poppler"],
   "version": "0.1.0",
   "repository": {
     "type": "git",
