--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "author": "AnatolyI <ai@rsl.ru>",
   "name": "poppler-simple",
   "description": "A simple interface to poppler library",
-  "keywords": ["poppler"],
+  "keywords": [
+    "poppler"
+  ],
   "version": "0.1.8",
   "repository": {
     "type": "git",
@@ -19,7 +21,9 @@
   "engines": {
     "node": ">=0.8.0 <0.12.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "nan": "^1.5.0"
+  },
   "devDependencies": {
     "mocha": "*"
   },
