Install nan before `node-gyp configure`

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "install": "(node-gyp rebuild) || (exit 0)",
-    "preinstall": "(node-gyp configure) || (exit 0)",
+    "preinstall": "((npm install nan) && (node-gyp configure)) || (exit 0)",
     "test": "./node_modules/mocha/bin/mocha -gc --slow 250",
     "clean": "((node-gyp clean) && (rm -rf node_modules)) || (exit 0)",
     "build-debug": "(node-gyp configure --debug && node-gyp rebuild --debug) || (exit 0)"
