--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,20 @@
 language: node_js
+sudo: false
+addons:
+  apt:
+    sources: ['ubuntu-toolchain-r-test']
+    packages:
+    - libpoppler-cpp-dev
+    - libpoppler-dev
+    - libfontconfig1-dev
+    - libpng12-dev
+    - libjpeg-turbo8-dev
+    - libtiff4-dev
+    - g++-4.9
+env: CXX=g++-4.9
 node_js:
   - "4.1"
   - "4.0"
   - "0.12"
   - "0.10"
   - "0.8"
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq libpoppler-cpp-dev libpoppler-dev libfontconfig1-dev libpng12-dev libjpeg-turbo8-dev libtiff4-dev
