--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "nan": "^2.11.1"
   },
   "devDependencies": {
-    "mocha": "5.2",
-    "img-diff-js": "0.4"
+    "mocha": "5.2"
   },
   "optionalDependencies": {}
 }
