--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nan": "^2.14.0"
   },
   "devDependencies": {
+    "@types/node": "^14.14.2",
     "mocha": "^7.2.0"
   },
   "optionalDependencies": {},
