--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "install": "(node-gyp rebuild) || (exit 1)",
     "preinstall": "((npm install nan@2.14.0) && (node-gyp configure)) || (exit 0)",
-    "test": "./node_modules/mocha/bin/mocha --expose-gc",
+    "test": "./node_modules/mocha/bin/mocha --expose-gc && check-dts",
     "clean": "((node-gyp clean) && (rm -rf node_modules)) || (exit 0)",
     "build-debug": "(node-gyp configure --debug && node-gyp rebuild --debug) || (exit 0)"
   },
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.2",
+    "check-dts": "^0.3.3",
     "mocha": "^7.2.0"
   },
   "optionalDependencies": {},
