--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "install": "(node-gyp rebuild) || (exit 1)",
-    "test": "./node_modules/mocha/bin/mocha --expose-gc && check-dts",
+    "test": "./node_modules/mocha/bin/mocha && check-dts",
     "clean": "((node-gyp clean) && (rm -rf node_modules)) || (exit 0)",
     "build-debug": "(node-gyp configure --debug && node-gyp rebuild --debug) || (exit 0)"
   },
@@ -26,13 +26,14 @@
     "nan": "^2.15.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.37",
-    "check-dts": "^0.4.4",
-    "mocha": "^8.3.2"
+    "@types/node": "^16.10.1",
+    "check-dts": "^0.5.6",
+    "mocha": "^9.1.2"
   },
   "optionalDependencies": {},
   "mocha": {
     "reporter": "spec",
-    "slow": "250"
+    "slow": "250",
+    "v8-expose-gc": true
   }
 }
