--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,6 @@ jobs:
         with:
           node-version: '${{ matrix.node }}'
       - run: sudo apt-get update -y
-      - run: sudo apt-get install -y pkg-config libpoppler-dev
+      - run: sudo apt-get install -y pkg-config libpoppler-dev libpoppler-cpp-dev libpoppler-glib-dev libpoppler-private-dev libpoppler-qt5-dev poppler-data poppler-utils 
       - run: npm install .
       - run: npm test
