--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "bluebird": "^3.7.2",
-    "nan": "^2.15.0"
+    "nan": "^2.15.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
